force-app/main/default/objects/Data_Approval_Request__c/Data_Approval_Request__c.object-meta.xml
<CustomObject>
    <label>Data Approval Request</label>
    <nameField>
        <displayFormat>DAR-{0000000}</displayFormat>
        <label>Data Approval Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>