force-app/main/default/objects/Data_Approval_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Approval Requests</relationshipLabel>
    <relationshipName>Data_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>