force-app/main/default/objects/Data_Approval_Request__c/fields/DAR_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DAR_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>DAR External ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>