force-app/main/default/objects/Data_Approval_Request__c/fields/Resoulation_Date__c.field-meta.xml
<CustomField>
    <fullName>Resoulation_Date__c</fullName>
    <label>Resoulation Date</label>
    <type>Date</type>
</CustomField>